# rag-facile-tech-preview

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PROXY_SETUP_GUIDE.md  README.md  TEST_PLAN.md  install.ps1  install.sh  justfile  pyproject.toml  ragfacile.toml  release-please-config.json
.config/: wt.toml
.github/workflows/: check-albert-version.yml  test-install.yml
.moon/templates/chainlit-chat/: .env.example  app.py  modules.yml  pyproject.toml  template.yml
.moon/templates/reflex-chat/: justfile  pyproject.toml  template.yml
.moon/templates/reflex-chat/app/: app.py  state.py
.moon/templates/reflex-chat/app/components/: chat.py  navbar.py
.moon/templates/reflex-chat/assets/: dsfr-theme.css
.moon/templates/reflex-chat/scripts/: open_browser.py
.rag-facile/agent/: MEMORY.md  profile.md
apps/chainlit-chat/: CHANGELOG.md  README.md  app.py  chainlit.md  chainlit_fr-FR.md  modules.yml  pyproject.toml
apps/cli/: CHANGELOG.md  README.md  pyproject.toml
apps/cli/src/cli/: main.py
apps/reflex-chat/: CHANGELOG.md  README.md  pyproject.toml
docs/: README.md
docs/guides/: ci-cd-linux.md  ci-cd-macos.md  ci-cd-windows.md  developer-setup-windows.md  evaluation.md  getting-started.md  how-rag-works.md  proxy-setup.md  rag-pipeline.md  supabase-setup.md  uninstalling.md  windows-setup.md  worktrees.md
docs/reference/: components.md  rag-science.md  ragfacile-toml.md
docs/troubleshooting/: proxy.md
supabase/: config.toml
tools/: build_release_asset.py  generate_templates.py  pyproject.toml
(+109 files in other folders)
