[project]
name = "{{ project_name }}"
version = "0.22.0" # x-release-please-version
description = "{{ description }}"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.29.0",
    "ragtime-lib",
    "chainlit>=1.3.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    # workspace packages
    "rag-core",
]

[project.scripts]
chainlit-chat = "ragtime-lib",
    "chainlit.cli:run"

[tool.setuptools]
py-modules = ["app"]

[tool.uv.sources]
ragtime-lib = { git = "https://github.com/etalab-ia/ragtime.git", {{ ragtime_ref_key }} = "{{ ragtime_ref_value }}", subdirectory = "packages/ragtime-lib" }

[tool.uv]
package = true
